--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,11 @@ a{
 }
 
 /******************Seccion de contacto*********************/
+.sect5{
+   font-size: 50px;
+   position: relative;
+   left: 5px;
+}
 .contact{
   /* background: url(../images/background/tile2.png);
    background-repeat: repeat;
@@ -187,5 +192,22 @@ a{
    margin-top: 3em;
    padding-bottom: 3em;
    color: #FFFFFF;
-
+}
+/****************Boton de CV**************************/
+.cv{
+   background-color: transparent;
+   width: 10%;
+   font-size: 20px;
+   border-radius: 20px;
+   border-color: #FFFFFF;
+   position: relative;
+   left: 3em;
+   text-decoration: none;
+}
+.cv a{
+   color: #FFFFFF;
+}
+.cv a:hover{
+   text-decoration: none;
+   color: #FFFFFF;
 }
